Fixing gallery content-width on mobile (part 1)

--- a/index.css
+++ b/index.css
@@ -267,7 +267,7 @@ div.img-small-right img {
 		padding: .3em;
 }
 	#gallery	{
-		width: 70%;
+		width: 100%;
 }
 	div.img img {
 		width: 160%;
